--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -7,6 +7,7 @@
 <title>Nos articles</title>
 <link rel="stylesheet" href="../static/css/bootstrap.min.css"
 	th:href="@{css/bootstrap.min.css}">
+<link rel="stylesheet" href="../static/css/style.css" th:href="@{css/style.css}">
 </head>
 <body>
 	<div layout:fragment="content">
@@ -14,18 +15,17 @@
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="#">Categories</a>
+						<a class="navbar-brand" th:href="@{/index(page=${currentPage} , keyword=${keyword})}">Categories</a>
 					</div>
 					
 						<ul class="nav navbar-nav" th:each="c:${listCategory}">
-							<li th:text="${c.name}"><a href="#"></a></li>
+						
+						<!--  th:class="${c.name==cat}?'active':''" -->
+						
+							<li><a  th:text="${c.name}" th:href="@{/index(page=${currentPage} , keyword=${keyword}, category=${c.id})}"> </a></li>
 						</ul>
 				</div>
 			</nav>
-
-
-
-
 
 
 			<div class="panel panel-primary">
@@ -44,11 +44,14 @@
 						<tr>
 							<th>Id</th>
 							<th>Description</th>
+							<th>Marque</th>
 							<th>Prix</th>
+							<th>Actions</th>
 						</tr>
 						<tr th:each="a:${listArticle}">
 							<td th:text="${a.id}"></td>
 							<td th:text="${a.description}"></td>
+							<td th:text="${a.brand}"></td>
 							<td th:text="${a.price}"></td>
 							<td><a class="btn btn-danger"
 								th:href="@{/delete(id=${a.id} , page=${currentPage} , keyword=${keyword})}">
